--- a/miniprogram/pages/playlist/playlist.wxml
+++ b/miniprogram/pages/playlist/playlist.wxml
@@ -1,6 +1,6 @@
 <!-- 轮播图 begin -->
 <swiper indicator-dots="true" autoplay="true" interval="2000" duration="1000">
-  <block wx:for="{{swiperImgUrls}}">
+  <block wx:for="{{swiperImgUrls}}" wx:key="url">
     <swiper-item>
       <image src="{{item.url}}" mode="widthFix" class="img"></image>
     </swiper-item>
@@ -9,7 +9,7 @@
 <!-- 轮播图 end -->
 
 <view class="playlist-container">
-  <block wx:for="{{playlist}}">
-    <x-playlist></x-playlist>
+  <block wx:for="{{playlist}}" wx:key="_id">
+    <x-playlist playlist="{{item}}"></x-playlist>
   </block>
 </view>
