--- a/miniprogram/components/progress-bar/progress-bar.wxss
+++ b/miniprogram/components/progress-bar/progress-bar.wxss
@@ -9,20 +9,20 @@
   flex: 1;
 }
 .movable-area{
-  widows: 100%;
+  width: 99%;
   height: 34rpx;
   position: absolute;
   bottom: -14rpx;
   left: 0;
 }
 .movable-view{
-  widows: 36rpx;
+  width: 36rpx;
   height: 36rpx;
   background: #fefefe;
-  border-radius: 50%;
+  border-radius: 100%;
 }
 .time{
-  width: 64rpx;
+  width: 68rpx;
   padding: 0 20rpx;
   font-size: 24rpx;
   font-family: NotoSansHans-Regular;
