--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -2,18 +2,22 @@
 <view class="player-mask"></view>
 
 <view class="player-info">
-  <view class="player-disc {{isPlaying?'play':''}}">
+  <!-- 封面信息 -->
+  <view class="player-disc {{isPlaying?'play':''}}" bind:tap="onChangeLyricShow" hidden="{{isLyricShow}}">
     <image class="player-img rotation {{isPlaying?'':'rotation-paused'}}" src="{{picUrl}}"></image>
   </view> 
-</view>
-<!-- 进度条 -->
-<view class="progress-bar">
-<x-progress-bar />
-</view>
+  <!-- 歌词 -->
+  <x-lyric class="lyric" isLyricShow="{{!isLyricShow}}" bind:tap="onChangeLyricShow" lyric="{{lyric}}"/>
+  <!-- 进度条 -->
+  <view class="progress-bar">
+  <x-progress-bar bind:musicEnd="onNext" bind:timeUpdate="timeUpdate" bind:musicPlay="onPlay" bind:musicPause="onPause" isSame="{{isSame}}"/>
+  </view>
 
-<!-- 控制面板 -->
-<view class="control">
-  <text class="iconfont icon-shangyishoushangyige" bind:tap="onPrev"> </text>
-  <text class="iconfont {{isPlaying?'icon-zanting':'icon-bofang'}}" bind:tap="togglePlaying"></text>
-  <text class="iconfont icon-xiayigexiayishou" bind:tap="onNext"></text>
+  <!-- 控制面板 -->
+  <view class="control">
+    <text class="iconfont icon-shangyishoushangyige" bind:tap="onPrev"> </text>
+    <text class="iconfont {{isPlaying?'icon-zanting':'icon-bofang'}}" bind:tap="togglePlaying"></text>
+    <text class="iconfont icon-xiayigexiayishou" bind:tap="onNext"></text>
+  </view>
+
 </view>
