--- a/miniprogram/pages/blog/blog.wxml
+++ b/miniprogram/pages/blog/blog.wxml
@@ -1,1 +1,19 @@
+<view class="container">
+<!-- 头部 -->
+  <view class="header">
+    <view class="publish-container" bind:tap="onPublish">
+      <i class="iconfont icon-fabu"></i>
+    </view>
+    <view class="search-container">
+    <x-search iconfont="iconfont" icon-sousuo="icon-sousuo"/>
+    </view>
+  </view>
 
+  <!-- 底部弹出层 -->
+  <x-login modalShow="{{modalShow}}" 
+  bind:loginsuccess="onLoginSuccess"
+  bind:loginfail="onLoginFail"
+  >
+    
+  </x-login>
+</view>
