--- a/miniprogram/pages/blog-edit/blog-edit.wxml
+++ b/miniprogram/pages/blog-edit/blog-edit.wxml
@@ -5,14 +5,19 @@
   ></textarea>
   <view class="image-list">
     <!-- 显示图片 -->
-
+    <block wx:for="{{images}}" wx:ley="*this">
+      <view class="image-wrap">
+        <image class="image" src="{{item}}" mode="aspectFill" bind:tap="onPreviewImage" data-imgsrc="{{item}}"></image>
+        <i class="iconfont icon-shanchu" bind:tap="onDelImage" data-index="{{index}}"></i>
+      </view>
+    </block>
     <!-- 选择图片 -->
-    <view class="image-wrap selectphoto">
+    <view class="image-wrap selectphoto" bind:tap="onChooseImage" hidden="{{!selectPhoto}}">
       <i class="iconfont icon-add-fill"></i>
     </view>
   </view>
 </view>
 <view class="footer" style="bottom:{{footerBottom}}px">
   <text class="words-num">{{wordsNum}}</text>
-  <button class="send-btn">发布</button>
+  <button class="send-btn" bind:tap="send">发布</button>
 </view>
