--- a/miniprogram/pages/blog/blog.wxml
+++ b/miniprogram/pages/blog/blog.wxml
@@ -5,10 +5,18 @@
       <i class="iconfont icon-fabu"></i>
     </view>
     <view class="search-container">
-    <x-search iconfont="iconfont" icon-sousuo="icon-sousuo"/>
+    <x-search iconfont="iconfont" icon-sousuo="icon-sousuo" bind:search="onSearch"/>
     </view>
   </view>
-
+  <!-- 博客卡片列表 -->
+  <view class="blog-list">
+    <block wx:for="{{blogList}}" wx:key="_id">
+      <view class="blog-panel">
+        <x-blog-card blog="{{item}}" data-blogid="{{item._id}}" bind:tap="goComment"/> 
+      </view>
+    </block>
+  </view>
+  
   <!-- 底部弹出层 -->
   <x-login modalShow="{{modalShow}}" 
   bind:loginsuccess="onLoginSuccess"
